src/main/resources/testsuite/invalid/collection-alsonp.trig
@prefix : <http://example.org/dataset1#> .
@prefix ex: <http://example.org/> .
@prefix np:  <http://www.nanopub.org/nschema#> .
@prefix prov: <http://www.w3.org/ns/prov#> . 
@prefix xsd:  <http://www.w3.org/2001/XMLSchema#> .

:head {
    ex:dataset1 a np:NanopublicationCollection .
    ex:dataset1 np:hasAssertionSet :assertionSet ;
        np:hasCollectionProvenance :provenance ; np:hasCollectionPubInfo :pubInfo .
    :assertionSet np:hasMember :1a, :2a, :3a .
    ex:dataset1 a np:Nanopublication .
}

:provenance {
    :assertionSet prov:wasDerivedFrom :experimentXYZ .
}

:pubInfo {
    ex:dataset1 prov:wasAttributedTo ex:paul .
    ex:dataset1 prov:generatedAtTime "2015-02-03T12:14:00Z"^^xsd:dateTime .
}

:1a { ex:thingA ex:is-related-to ex:thingX }

:2a { ex:thingB ex:is-related-to ex:thingX }

:3a { ex:thingC ex:is-related-to ex:thingX }
